# gp2caruvmapper

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: uv-mapping.md
examples/: face_check.rs  pack_audit.rs  recover_audit.rs  render_sym.rs
src/: app.rs  app_core.rs  lib.rs  main.rs
src/core/: bmp.rs  dat.rs  jam.rs  mod.rs  model.rs  palette.rs  patch.rs  symmetric.rs  unwrap.rs  uvtable.rs
tests/: app_core.rs  bmp_output.rs  congruence_gate.rs  dat_faces.rs  dat_geometry.rs  dat_header.rs  face_model.rs  jam530_rule.rs  patch.rs  patch_block.rs  recover.rs  recover_patch.rs  symmetric_layout.rs  unwrap_invariants.rs  uvtable_decode.rs  uvtable_from_exe.rs  uvtable_roundtrip.rs
tests/fixtures/: original_dat_meta.json  svga_uv_golden.json
tools/: gen_palette.py
