[package]
name = "gp2-car-uv-mapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "gp2uv"
path = "src/lib.rs"

[[bin]]
name = "gp2-car-uv-mapper"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui = "0.29"
rfd = "0.15"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
